<resources>
    <string name="app_name">Smart Revolution App</string>
    <string name="auth_succes">Authorization success</string>
    <string name="auth_failed">Authorization failed</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_item_dashboard">Dashboard</string>
    <string name="header">Smart Revolution</string>
    <string name="header_url" />
    <string name="menu_log_out">Log out</string>
    <string name="desc_logo">Logo</string>
    <string name="menu_item_exit">Exit</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_about">About app</string>
    <string name="menu_item_contacts">Contacts</string>
    <string name="applock_about">Заблокировать приложение пинкодом</string>
    <string name="locker_textview">Enter your pin:</string>
    <string name="tab_layout_groups">Groups</string>
    <string name="tab_layout_states">States</string>
    <string name="dialog_tittle_open_server">Connect to server</string>
    <string name="dialog_server_open_text">Application will connect to the selected server</string>
    <string name="dialog_connect">Connect</string>
    <string name="desc_server_icon">Server icon</string>
    <string name="dashboard_hint">So far, it\'s empty here :(</string>
    <string name="menu_item_groups">Groups</string>
    <string name="group_empty_desc">There is no description for this group</string>
    <string name="dialog_tittle_remove_server">Server removing</string>
    <string name="dialog_server_remove_text">Are you sure you want to delete the selected server</string>
    <string name="dialog_positive_remove">Remove</string>
    <string name="menu_item_ticket">Tickets</string>
    <string name="dialog_ticket_created_text">Your ticket has been created and sent for processing. If its status changes, you will receive a notification and email</string>
    <string name="dialog_ticket_created_header">Ticket created</string>
    <string name="menu_item_map">Map</string>
    <string name="state_media_player">Media player</string>
    <string name="dialog_network_header">Network connection closed!</string>
    <string name="dialog_network_text">A stable internet connection is required for the application to work. Please connect to the Internet and this dialog will close automatically. \nWhen you click OK, you will return to the server selection screen</string>
</resources>