<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
        <item
            android:id="@+id/groupFragment"
            android:icon="@drawable/ic_baseline_dashboard_24"
            android:title="@string/menu_item_dashboard" />
        <item
            android:id="@+id/ticketListFragment"
            android:icon="@drawable/baseline_assignment_24"
            android:title="@string/menu_item_ticket"
            android:actionLayout=""/>
        <item
            android:id="@+id/mapFragment"
            android:icon="@drawable/baseline_map_24"
            android:title="@string/menu_item_map" />
        <item
            android:id="@+id/settingsFragment"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/menu_item_settings" />
        <item
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/menu_item_about" />
        <item
            android:icon="@drawable/ic_baseline_contact_support_24"
            android:title="@string/menu_item_contacts" />
</menu>